--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
 
         <div class="background">
-
-        <img src="images/wp4447817.jpeg" alt="background">
+        <img src="images/wp4447817.jpeg" alt="background"> 
+        </div>
                   
     </body>
 </html>
